Create Entity and Add new  Account Api

--- a/IdentityServer/Properties/Resources.resx
+++ b/IdentityServer/Properties/Resources.resx
@@ -150,6 +150,9 @@
   <data name="Thismobilenumberalreadyexists" xml:space="preserve">
     <value>This mobile number already exists</value>
   </data>
+  <data name="ThisMobileNumberOrNationalIdAlreadyExists" xml:space="preserve">
+    <value>This mobile number or Nationalid already exists</value>
+  </data>
   <data name="Trialshaveexceededthelimit" xml:space="preserve">
     <value>Trials have exceeded the limit</value>
   </data>
