--- a/IdentityServer/Properties/Resources.resx
+++ b/IdentityServer/Properties/Resources.resx
@@ -147,6 +147,9 @@
   <data name="Thetimehasexceedetthelimit" xml:space="preserve">
     <value>The time has exceeded the limit</value>
   </data>
+  <data name="ThisAccountHaschannelAlready" xml:space="preserve">
+    <value>This account has channel already</value>
+  </data>
   <data name="ThisAccountHasChannelTypeBefore" xml:space="preserve">
     <value>This account has channel type before</value>
   </data>
