Create Get Parent Accounts api with fix and replace Resoureces to localizer

--- a/IdentityServer/Resources/AuthenticationResource.en.resx
+++ b/IdentityServer/Resources/AuthenticationResource.en.resx
@@ -147,8 +147,23 @@
   <data name="Thetimehasexceedetthelimit" xml:space="preserve">
     <value>The time has exceeded the limit</value>
   </data>
+  <data name="ThisAccountHasChannelAlready" xml:space="preserve">
+    <value>This account has channel already</value>
+  </data>
+  <data name="ThisAccountHasChannelTypeBefore" xml:space="preserve">
+    <value>This account has channel type before</value>
+  </data>
+  <data name="ThisAccountIsNotExists" xml:space="preserve">
+    <value>This account is not exists</value>
+  </data>
+  <data name="ThisChannelExistedBefore" xml:space="preserve">
+    <value>This channel existed before</value>
+  </data>
   <data name="Thismobilenumberalreadyexists" xml:space="preserve">
     <value>This mobile number already exists</value>
+  </data>
+  <data name="ThisMobileNumberOrNationalIdAlreadyExists" xml:space="preserve">
+    <value>This mobile number or Nationalid already exists</value>
   </data>
   <data name="Trialshaveexceededthelimit" xml:space="preserve">
     <value>Trials have exceeded the limit</value>
